--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,6 @@ html {
     height: 100%;
 }
 
-@font-face {
-    font-family: signika;
-    src: url(SignikaNegative-Semibold.ttf);
-}
-
 
 
 body {
@@ -15,7 +10,7 @@ body {
     background-size: 100% 100%;
     background-position: 0px 0px,0px 0px,0px 0px,0px 0px,0px 0px,0px 0px,0px 0px,0px 0px,0px 0px,0px 0px,0px 0px;
     background-image: radial-gradient(18% 28% at 24% 50%, #BC8FFDAD 6%, #FF4FD200 83%, #073AFF00 100%),radial-gradient(18% 28% at 18% 71%, #E0A8F2F5 6%, #073AFF00 100%),radial-gradient(70% 53% at 36% 76%, #D966D7FF 0%, #073AFF00 100%),radial-gradient(42% 53% at 15% 94%, #E0A8F2F5 7%, #073AFF00 100%),radial-gradient(42% 53% at 34% 72%, #FFFFFFFF 7%, #073AFF00 100%),radial-gradient(18% 28% at 35% 87%, #9342DDFF 7%, #073AFF00 100%),radial-gradient(31% 43% at 7% 98%, #FFFFFFFF 24%, #073AFF00 100%),radial-gradient(21% 37% at 72% 23%, #BA9EFFF5 24%, #073AFF00 100%),radial-gradient(35% 56% at 91% 74%, #FF4FD2F5 9%, #073AFF00 100%),radial-gradient(74% 86% at 67% 38%, #D6C6E6F5 24%, #073AFF00 100%),linear-gradient(127deg, #8A4FFFF5 1%, #4C00FCFF 100%);
-    font-family: signika;
+    font-family: 'Signika';
 }
 
 h1 {
@@ -24,8 +19,8 @@ h1 {
 }
 
 .cards {
+    margin: 2%;
     text-align: center;
-    
     padding: 1%;
     background: rgba(255, 255, 255, 0.2);
     border-radius: 16px;
@@ -33,14 +28,17 @@ h1 {
     backdrop-filter: blur(10.5px);
     -webkit-backdrop-filter: blur(10.5px);
     border: 1px solid rgba(255, 255, 255, 0.3);
+    overflow-wrap: normal;
 }
 
 #container {
+    width: 100%;
+    height: 100%;
+    margin: 5%;
+    align-items: center;
     display: grid;
-    display: grid;
-    grid-template-columns: repeat(auto-fill), minmax(0, 1fr);
-    grid-template-rows: 200px auto;
-    gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(15dvw, 1fr));
+    gap: 20px;
     padding: 1em;
     max-width: 70rem;
 }
