--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 html {
-    width: 100%;
-    height: 100%;
+    width: 100dvw;
+    height: 100dvh;
 }
 
 
@@ -39,7 +39,7 @@ h3 {
     border: 1px solid rgba(255, 255, 255, 0.3);
     overflow-wrap: normal;
     transition: all 400ms;
-
+    overflow: hidden;
 }
 
 .cards:hover {
@@ -48,12 +48,13 @@ h3 {
 }
 
 #container {
+    width: 74dvw;
     justify-content: center;
     align-content: center;
     margin: 5%;
     align-items: center;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(36vmin, 4fr));
     gap: 20px;
     padding: 1em;
     max-width: 70rem;
@@ -78,12 +79,24 @@ a {
     background-color: #915aff;
 }
 
-#moustage>img {
-    background-color: #8c6a4b;
-    padding-top: 25%;
-    padding-bottom: 25%;
-    padding-left: 5%;
-    padding-right: 5%;
+.centre>img {
+    margin-top: 40%;
     width: 80%;
 }
 
+.centre {
+    margin-left: 5%;
+    border-radius: 16px;
+    width: 90%;
+    aspect-ratio: 1/1;
+    margin-top: 5%;
+}
+#moustage>.centre {
+    background-color: #8c6a4b;
+}
+
+
+
+#meaty>.centre {
+    background-color: #FFFFFFFF;
+}
